fixed search bar ----Z-index--- issue

--- a/src/components/header/Menu.scss
+++ b/src/components/header/Menu.scss
@@ -9,6 +9,7 @@ body {
   color: $blue;
 }
 header {
+  z-index: 2;
   top: 0;
   position: fixed;
   width: 100%;
@@ -40,7 +41,7 @@ header {
 }
 
 .drop-down {
-  z-index: 1;
+  z-index: 20;
   font-weight: 900;
   text-transform: uppercase;
   height: 120px;
@@ -78,33 +79,26 @@ header {
     }
   }
 }
-
-//mobile
-@include mediaSm {
-  .logo {
-    margin-left: 40% !important;
-  }
-  body {
-  }
-}
-
-@include mediaMd {
-  .logo {
-    margin-left: 44% !important;
-  }
-}
-
-@include mediaLg {
-  .logo {
-    margin-left: 46.5% !important;
+/*----------------------login------------------------*/
+.login-button {
+  background-color: $blue;
+  color: $light-grey;
+  position: absolute;
+  left: 0;
+  padding: 26px;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 15px;
+  border: none;
+  background-color: rgb(42, 42, 42) rgba(2, 2, 2, 2);
+  &:hover {
+    background-color: $light-grey;
+    color: $blue;
+    transition: 0.5s;
+    border: 1px solid $blue;
   }
 }
-
-@include mediaXl {
-  .logo {
-    margin-left: 47.5% !important;
-  }
-}
+/*----------------------login------------------------*/
 
 /* -----------------------------NAV--------------------------------- */
 #burger,
@@ -149,3 +143,32 @@ input[type="checkbox"] {
   visibility: hidden;
 }
 /* -----------------------------NAV--------------------------------- */
+
+/* -----------------------------MOBILE------------------------------ */
+//mobile
+@include mediaSm {
+  .logo {
+    margin-left: 40% !important;
+  }
+  body {
+  }
+}
+
+@include mediaMd {
+  .logo {
+    margin-left: 44% !important;
+  }
+}
+
+@include mediaLg {
+  .logo {
+    margin-left: 46.5% !important;
+  }
+}
+
+@include mediaXl {
+  .logo {
+    margin-left: 47.5% !important;
+  }
+}
+/* -----------------------------MOBILE------------------------------ */
