--- a/src/components/infoPage/StockDetails.scss
+++ b/src/components/infoPage/StockDetails.scss
@@ -18,12 +18,13 @@ p {
 }
 
 .back-to-list {
-  z-index: -1;
+  position: fixed;
+  z-index: 4;
   width: 180px;
   height: 35px;
   margin-left: 0;
-  margin-top: -30px;
-  position: absolute;
+  margin-top: -48px;
+
   background-color: $blue;
   color: $light-grey;
   font-weight: bold;
@@ -34,7 +35,7 @@ p {
     z-index: 2;
     background-color: $light-grey;
     color: $blue;
-    margin-top: -35px;
+    margin-top: -50px;
     width: 185px;
     height: 40px;
     transition: 0.5s;
@@ -43,3 +44,17 @@ p {
     border: 1px solid $blue;
   }
 }
+/* -----------------------------MOBILE------------------------------ */
+//mobile
+@include mediaSm {
+}
+
+@include mediaMd {
+}
+
+@include mediaLg {
+}
+
+@include mediaXl {
+}
+/* -----------------------------MOBILE------------------------------ */
