--- a/src/components/mainPage/SearchStocks.scss
+++ b/src/components/mainPage/SearchStocks.scss
@@ -1,25 +1,28 @@
 @import "../../config";
-
-.search-button {
-  margin-right: 10px;
-  margin-top: 25px;
-  height: 22px;
-  z-index: -100;
-  border: 0 solid rgba(255, 255, 255, 0);
-  background-color: rgba(255, 255, 255, 0);
-  .search-button:hover {
-    margin-right: 9px;
-    height: 24px;
-    margin-top: 4px;
-    transition: 0.5s;
-  }
-}
-
 form {
   margin-top: 70px;
 }
+.search-input {
+  z-index: 2;
+}
+.cls-1 {
+  fill: #e89797;
+}
+.search-button {
+  background-color: $light-grey;
+  padding: 8px 20px 6px 78px;
+  z-index: -2;
+  margin-right: -7px;
+  margin-top: 19px;
+  height: 22px;
+  &:hover {
+    background: $dark-grey;
+    margin-right: -7px;
+    transition: 0.5s;
+  }
+}
 .input_field {
-  z-index: -1;
+  z-index: 10;
   text-transform: uppercase;
   text-align: center;
   font-size: 13px;
@@ -33,8 +36,8 @@ form {
 i {
   margin-left: 45%;
 }
-
 .cursor {
+  z-index: 1;
   position: relative;
 }
 .cursor i {
@@ -80,10 +83,10 @@ i {
 
 @include mediaMd {
   i {
-    margin-left: 42%;
+    margin-left: 43%;
   }
   .input_field {
-    margin-left: 10px;
+    margin-left: 5px;
   }
 }
 
